fixing css with for container with private infos
bug where the height was cut if screen too wide

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -716,8 +716,8 @@ input.btn{
 
 div.privateinfo{
 	width: 100%;
-	height: 100%;
-	min-height: 500px;
+	height: 120%;
+	min-height: 1000px;
 	background-image: url("./img/poulet.jpg");
 	background-size: cover;
 	font-size: calc(1em + 1vw);
